test/sh/error/passing_param_to_paramless_func.sk
f() {
	# do nothing
}

f(x)
